spacing issue that was bugging me

--- a/src/apply/apply.scss
+++ b/src/apply/apply.scss
@@ -7,6 +7,12 @@
                 font-size: 22px;
                 line-height: 150%;    
             }
+
+            a {
+                margin-bottom: 10px;
+            }
+
+
         }
 
         .right {
